# WaveCMP

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  build.sh  compile_project.sh  config.status  configure  configure.ac  configure.scan  restore  update_autotools.sh  wavecmp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gui/: wavecmp2.glade  wavecmp2.glade~
include/: wavecmp.hpp
src/: Makefile.am  func.cpp  wavecmp.cpp  wavecmp.glade
src/.deps/: func.Po  wavecmp.Po
