#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([WaveCMP], [1.1], [nsdrozario@gmail.com])
AC_CONFIG_SRCDIR([src/wavecmp.cpp])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CPP

# Checks for libraries.
PKG_CHECK_MODULES(gtkmm, gtkmm-3.0)
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT
